--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\nvda.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
