--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\nvda.h">
+    <ClInclude Include="..\boy_impl.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\loguru.hpp">
