ini 使用全英文名

--- a/朗读配置.ini
+++ b/朗读配置.ini
@@ -1,10 +1,10 @@
 ; 适用于保益读屏
-[朗读]
+[APP]
 ; 独立通道：0使用读屏通道；1使用独立通道
-独立通道=1
+USE_SLAVE=1
 
 ; 排队朗读：独立通道=1时，有效。0打断朗读；1排队朗读
-排队朗读=1
+USE_APPEND=1
 
 ; 按键打断朗读：独立通道=1时，有效。0按键不打断朗读；1按下任何按键都打断朗读
-按键打断朗读=1
+ALLOW_BREAK=1
