--- a/朗读配置.ini
+++ b/朗读配置.ini
@@ -3,7 +3,7 @@
 ; 独立通道：0使用读屏通道；1使用独立通道
 USE_SLAVE=1
 
-; 排队朗读：独立通道=1时，有效。0打断朗读；1排队朗读
+; 排队朗读：0打断朗读；1排队朗读
 USE_APPEND=1
 
 ; 按键打断朗读：独立通道=1时，有效。0按键不打断朗读；1按下任何按键都打断朗读
