ini 更新 使用打断键 说明

--- a/朗读配置.ini
+++ b/朗读配置.ini
@@ -6,5 +6,5 @@ USE_SLAVE=1
 ; 排队朗读：0打断朗读；1排队朗读
 USE_APPEND=1
 
-; 按键打断朗读：独立通道=1时，有效。0按键不打断朗读；1按下任何按键都打断朗读
+; 使用打断键：独立通道=1时，有效。0忽略打断键，按下也不打断朗读；1按下打断键可以打断朗读
 ALLOW_BREAK=1
