--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -46,10 +46,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="dll.def">
+    <None Include="..\朗读配置.ini">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\朗读配置.ini">
+    <None Include="..\dll.def">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
