--- a/VS2022/BaoYi-fake-nvda.vcxproj
+++ b/VS2022/BaoYi-fake-nvda.vcxproj
@@ -21,14 +21,17 @@
   <ItemGroup>
     <ClCompile Include="..\deps\loguru\loguru.cpp" />
     <ClCompile Include="..\deps\simpleini\ConvertUTF.c" />
+    <ClCompile Include="..\ini.cpp" />
     <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h" />
+    <ClInclude Include="..\boy_global.hpp" />
     <ClInclude Include="..\deps\loguru\loguru.hpp" />
     <ClInclude Include="..\deps\simpleini\ConvertUTF.h" />
     <ClInclude Include="..\deps\simpleini\SimpleIni.h" />
     <ClInclude Include="..\boy_impl.h" />
+    <ClInclude Include="..\ini.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\dll.def" />
