--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\ini.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\dll.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h">
@@ -51,6 +54,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\boy_global.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\dll.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
