--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\dll.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\log.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h">
@@ -57,6 +60,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\dll.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\log.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
