--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -71,7 +71,7 @@
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h">
       <Filter>头文件\boy</Filter>
     </ClInclude>
-    <ClInclude Include="..\nvdll.h">
+    <ClInclude Include="..\nvdll_impl.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
