nvda.h NVDA 函数名兼容

--- a/VS2022/BaoYi-fake-nvda.vcxproj.filters
+++ b/VS2022/BaoYi-fake-nvda.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="..\nvdll_impl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\nvda.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\朗读配置.ini">
