--- a/VS2022/BaoYi-fake-nvda.vcxproj
+++ b/VS2022/BaoYi-fake-nvda.vcxproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h" />
+    <ClInclude Include="..\nvda.h" />
     <ClInclude Include="..\nvdll_impl.h" />
     <ClInclude Include="..\global.hpp" />
     <ClInclude Include="..\deps\loguru\loguru.hpp" />
