NvdaTest 更新头文件使用

--- a/VS2022/NvdaTest/NvdaTest.vcxproj
+++ b/VS2022/NvdaTest/NvdaTest.vcxproj
@@ -149,8 +149,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\boy_impl.h" />
-    <ClInclude Include="..\..\NvdaTest\nvda.h" />
+    <ClInclude Include="..\..\nvda.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
