--- a/VS2022/NvdaTest/NvdaTest.vcxproj.filters
+++ b/VS2022/NvdaTest/NvdaTest.vcxproj.filters
@@ -20,10 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\NvdaTest\nvda.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\boy_impl.h">
+    <ClInclude Include="..\..\nvda.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
