--- a/VS2022/BaoYi-fake-nvda.vcxproj
+++ b/VS2022/BaoYi-fake-nvda.vcxproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ClInclude Include="..\baoyi-dll\BoyCtrl.h" />
     <ClInclude Include="..\deps\spdlog\include\spdlog\spdlog.h" />
+    <ClInclude Include="..\deps\spdlog\include\spdlog\tweakme.h" />
     <ClInclude Include="..\nvda.h" />
     <ClInclude Include="..\nvdll_impl.h" />
     <ClInclude Include="..\deps\loguru\loguru.hpp" />
