添加调试日志选项

--- a/朗读配置.ini
+++ b/朗读配置.ini
@@ -8,3 +8,6 @@ USE_APPEND=1
 
 ; 使用打断键：独立通道=1时，有效。0永不打断，按下打断键也不打断朗读；1仅按下打断键打断；2按下任意按键可以打断朗读
 ALLOW_BREAK=2
+
+; 输出额外的调试日志：0=仅info级别的日志，保益无日志；1=输出debug级别的调试日志，并生成保益的日志
+DEBUG_LOG=0
