NvdaGuiTest 运行指定的命令

--- a/NvdaGuiTest/NvdaGuiTest.vcxproj
+++ b/NvdaGuiTest/NvdaGuiTest.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\nvda.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="NvdaGuiTest.h" />
     <ClInclude Include="Resource.h" />
