--- a/NvdaGuiTest/NvdaGuiTest.vcxproj.filters
+++ b/NvdaGuiTest/NvdaGuiTest.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="NvdaGuiTest.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\nvda.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NvdaGuiTest.cpp">
