--- a/VS2022/BaoYi-fake-nvda.vcxproj
+++ b/VS2022/BaoYi-fake-nvda.vcxproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\dll.def" />
-    <None Include="..\朗读配置.ini" />
+    <None Include="..\nvdaCfg.ini" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
