--- a/nvdaCfg.ini
+++ b/nvdaCfg.ini
@@ -1,5 +1,16 @@
 ; 适用于 NVDA 桥接保益读屏
+; 注意：配置文件放置在和  nvdaControllerClient.dll 相同的目录下.
+;   此配置文件仅在加载时读取一次
+
 [APP]
+; 调试日志选项。DLL 会生成 nvdaDll.log 日志，默认记录 INFO 级别的日志。
+;   0=输出info级别的日志；1=输出debug级别的调试日志，并生成单独的保益调用日志 boyCtrl-debug.log
+DEBUG_LOG=0
+
+; 生成保益接口的调用日志。0=不生成(默认); 1=生成 boyCtrl-debug.log
+;   注意调用日志会记录每一次 API 调用，会变成很大，主要是用于接口调试。
+BOY_LOG=0
+
 ; 独立通道：0使用读屏通道；1使用独立通道
 USE_SLAVE=1
 
@@ -8,6 +19,3 @@ USE_APPEND=1
 
 ; 使用打断键：独立通道=1时，有效。0永不打断，按下打断键也不打断朗读；1仅按下打断键打断；2按下任意按键可以打断朗读
 ALLOW_BREAK=2
-
-; 输出额外的调试日志：0=仅info级别的日志，保益无日志；1=输出debug级别的调试日志，并生成保益的日志
-DEBUG_LOG=0
