ini: 添加 BREAK_CTRL

--- a/nvdaCfg.ini
+++ b/nvdaCfg.ini
@@ -11,6 +11,9 @@ DEBUG_LOG=0
 ;   注意调用日志会记录每一次 API 调用，会变成很大，主要是用于接口调试。
 BOY_LOG=0
 
+; 打断控制. 0=默认，程序自行决定是否排队朗读，补丁不做处理；1=自定义，可在下方排队朗读参数下定义是否排队朗读。
+BREAK_CTRL=1
+
 ; 独立通道：0使用读屏通道；1使用独立通道
 USE_SLAVE=1
 
